# NN_hyp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  FRONTEND_HANDOFF.md  HANDOFF_NEXT_AGENT.md  PLAN_BACKEND_CODEX.md  PLAN_UI_CODEX.md  README.md  TRANSFER_README.md  docker-compose.integration.example.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  adapters.py  main.py
docs/: GEMINI_INTEGRATION.md  PLAN_COVERAGE.md  RUNBOOK.md  VDS_TUNNEL_DEPLOY.md  YANDEX_INTEGRATION.md
frontend/: .dockerignore  .env.example  .gitignore  README.md  eslint.config.js  index.html  nginx.backend.conf.example  nginx.conf  openapi.mock.yml  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/docs/handoff/: API_INTEGRATION.md  SCREENSHOTS.md
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.test.tsx  App.tsx  AppShell.tsx
frontend/src/features/experiments/: ExperimentsPage.tsx
frontend/src/features/hypotheses/: HypothesesPage.tsx
frontend/src/features/projects/: ProjectsPage.tsx
frontend/src/features/research/: ResearchPage.tsx
frontend/src/features/workspace/: WorkspacePage.tsx
frontend/src/mocks/contracts/: hypotheses.json  knowledge-graph.json  project-submit.json
frontend/tests/e2e/: clean-isolation.spec.ts  core.spec.ts
infra/neo4j/: init.cypher
infra/postgres/: 001_init.sql
scripts/: deploy_vds.ps1  golden_eval.py  manual_full_test.ps1  manual_test.ps1  multilingual_eval.py  smoke_test.py  start.ps1  start_full.ps1  start_vds_tunnel.ps1
tests/: test_api.py  test_model_gateway_gemini.py
(+8 files in other folders)
